tests/no_std/tests/snapshots/snapshots__snapshots_no_std_config_deserialize_shape.snap
---
source: tests/no_std/tests/snapshots.rs
expression: "NoStdConfig::deserialize_shape()"
---
DeserializeShapeGraph {
    root: Definition(
        ShapeId(
            0,
        ),
    ),
    definitions: [
        DeserializeDefinitionShape {
            id: ShapeId(
                0,
            ),
            type_name: DeserializeTypeName {
                rust_name: "serde_shape_test_no_std::NoStdConfig",
                name: "NoStdConfig",
            },
            kind: Struct(
                DeserializeStructShape {
                    style: Struct,
                    fields: [
                        DeserializeFieldShape {
                            member: Named(
                                "name",
                            ),
                            name: "name",
                            aliases: [
                                "name",
                            ],
                            wire_shape: Value(
                                String,
                            ),
                            default: None,
                        },
                        DeserializeFieldShape {
                            member: Named(
                                "values",
                            ),
                            name: "values",
                            aliases: [
                                "values",
                            ],
                            wire_shape: Value(
                                Seq(
                                    Option(
                                        U16,
                                    ),
                                ),
                            ),
                            default: None,
                        },
                        DeserializeFieldShape {
                            member: Named(
                                "child",
                            ),
                            name: "child",
                            aliases: [
                                "child",
                            ],
                            wire_shape: Value(
                                Option(
                                    Definition(
                                        ShapeId(
                                            0,
                                        ),
                                    ),
                                ),
                            ),
                            default: None,
                        },
                    ],
                    attributes: DeserializeContainerAttributes {
                        tagging: External,
                        deny_unknown_fields: false,
                        default: None,
                        has_flatten: false,
                        transparent: false,
                        expecting: None,
                        non_exhaustive: false,
                    },
                },
            ),
        },
    ],
}
