tests/no_std/tests/snapshots/snapshots__snapshots_no_std_config_serialize_shape.snap
---
source: tests/no_std/tests/snapshots.rs
expression: "NoStdConfig::serialize_shape()"
---
SerializeShapeGraph {
    root: Definition(
        ShapeId(
            0,
        ),
    ),
    definitions: [
        SerializeDefinitionShape {
            id: ShapeId(
                0,
            ),
            type_name: SerializeTypeName {
                rust_name: "serde_shape_test_no_std::NoStdConfig",
                name: "NoStdConfig",
            },
            kind: Struct(
                SerializeStructShape {
                    style: Struct,
                    fields: [
                        SerializeFieldShape {
                            member: Named(
                                "name",
                            ),
                            name: "name",
                            wire_shape: Value(
                                String,
                            ),
                            skip_if: None,
                        },
                        SerializeFieldShape {
                            member: Named(
                                "values",
                            ),
                            name: "values",
                            wire_shape: Value(
                                Seq(
                                    Option(
                                        U16,
                                    ),
                                ),
                            ),
                            skip_if: None,
                        },
                        SerializeFieldShape {
                            member: Named(
                                "child",
                            ),
                            name: "child",
                            wire_shape: Value(
                                Option(
                                    Definition(
                                        ShapeId(
                                            0,
                                        ),
                                    ),
                                ),
                            ),
                            skip_if: None,
                        },
                    ],
                    attributes: SerializeContainerAttributes {
                        tagging: External,
                        has_flatten: false,
                        transparent: false,
                        non_exhaustive: false,
                    },
                },
            ),
        },
    ],
}
